tests/NormalTests/paczka2/big_fuzzy/36956128.err
Error in line 1: pCyPYBaLJ A594 30,2
Error in line 15: qhQG70 A32 61,8
Error in line 29: TRE9 A956 60,3
Error in line 36: qhQG70 S765 425,0
Error in line 45: A32 A956 271,2
Error in line 48: A32 A32 98,4
Error in line 49: A32 S765 38,1
Error in line 17: pCyPYBaLJ A956 314,0
Error in line 66: A32 S765 -1,8
Error in line 68: qhQG70 A956 16,77
Error in line 74: nHj30wJx A594 26,5
Error in line 77: TRE9 A594 71,6
Error in line 63: A32 S765 9,6
Error in line 82: A32 A32 98,0
Error in line 87: nHj30wJx A594 57,12
Error in line 86: qhQG70 A956 23,9
Error in line 92: Q3TGQq3 A956 28,1
Error in line 103: qhQG70 S765 69,5
Error in line 108: TRE9 A32 3,8
Error in line 109: TRE9 A956 76,7
Error in line 116: qhQG70 A594 42,8
Error in line 117: nHj30wJx A956 78,3
Error in line 135: Q3TGQq3 A956 55,6
Error in line 142: nHj30wJx A32 11,9
Error in line 144: A32 A32 36,0
Error in line 152: pCyPYBaLJ S765 82,88
Error in line 154: qhQG70 A956 8,3
Error in line 147: pCyPYBaLJ A32 112,8
Error in line 163: pCyPYBaLJ S765 129,2
Error in line 171: pCyPYBaLJ A32 67,70
Error in line 166: pCyPYBaLJ A32 15,4
Error in line 190: pCyPYBaLJ A32 86,8
Error in line 189: A32 A956 14,2
Error in line 198: A32 A594 57,8
Error in line 211: qhQG70 A32 88,6
Error in line 218: pCyPYBaLJ A594 69,3
Error in line 223: pCyPYBaLJ A956 96,9
Error in line 225: qhQG70 A594 34,4
Error in line 224: pCyPYBaLJ S765 51,4
Error in line 239: pCyPYBaLJ A594 31,1
Error in line 241: pCyPYBaLJ S765 64,4
Error in line 238: nHj30wJx S765 84,2
Error in line 243: nHj30wJx A594 6,6
Error in line 208: Jwln A594 16,6
Error in line 249: A32 A32 -3,0
